添加 @unocss/preset-wind 依赖，更新 tsconfig 配置，优化 EffectSwiper 组件以动态加载图片

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,12 @@
     "esModuleInterop": false,
     "forceConsistentCasingInFileNames": true,
     "isolatedModules": true,
-    "skipLibCheck": false
+    "skipLibCheck": false,
+    "baseUrl": "./",
+    "outDir": "dist",
+    "paths": {
+      "@/*": ["src/*"]
+    },
   },
   "include": ["./src"]
 }
