--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@unocss/core": "latest",
     "@unocss/preset-attributify": "latest",
     "@unocss/preset-icons": "latest",
+    "@unocss/preset-wind": "^0.65.3",
     "@vitejs/plugin-react": "^4.3.4",
     "cross-env": "^7.0.3",
     "typescript": "^5.7.2",
